# ml-debug-hackathon-2025

./: .gitignore  README.md  business_terminologies.txt  config.json  main.py  pyproject.toml
data/: 408917ed-b7fe-43f2-94c4-8d7fcead0250_OfflineMarketingData.csv  BudgetAllocationProblemDataDictionary.xlsx  DataDictionary.xlsx  OnlineMarketingData.csv  PreProcessingfinaldata.csv  PricingData.csv  features.csv  misc.csv  preprocessed_data.csv
data/buggy/: ae35dbbf-3e32-40de-ac9f-828377929789_PreProcessingfinaldata.csv  b22568c4-647e-49ea-b028-50145f31c795_preprocessingbuggydata.csv  d6a7d201-5a59-4d58-870a-98b04e245490_PreProcessingBuggydata.csv
data/report/: offline_data_report.html  online_data_report.html  price_data_report.html  sales_data_report.html
infra/: README.md  backend.tf  main.tf  providers.tf  variables.tf  versions.tf
modules/module_1_EDA/: corrections.ipynb
modules/module_3_FEATURE_ENGINEERING/: corrections.ipynb
modules/module_4_MODEL_TRAINING/: corrected.ipynb  modelbuggyartifact.ipynb
modules/module_5_MLFLOW/: MLFlowbuggyartifact_corrected.ipynb
modules/module_6_DEPLOYMENT/: corrections.ipynb  lassomodel.pkl  lassomodel_trained.pkl
notebooks/buggy/: 0f661a3d-dbc9-4e4d-bf3d-82ccc63ac640_MLFlowbuggyartifact.ipynb  355c8fcd-501c-4c10-85e1-1bb1cae699c7_EDABuggyNotebook.ipynb  4f9abc59-8237-4be4-8e2b-255e1a71e510_cicdpipelinetestmodel.yaml  75a2e251-38b0-4ae5-b414-de87e4d26c2e_cicdpipeline.yaml  9409cf39-56af-4ebe-b1b8-1d89f6af2006_modelbuggyartifact.ipynb  96e08f80-5b48-498c-98f9-ccf7b6944d73_featureengineeringbuggyazureartifact.ipynb  (+4 more)
(+24 files in other folders)
