    [project]
name = "ml-debug-hackathon-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-file-datalake>=12.20.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
